css/style.css
@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');

* {
  font-family: 'VT323', monospace;
}

html, body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  background: url("../img/background.png");
}

.intro {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: black;
}

.intro h3 {
  color: white;
  font-size: 3.5em;
}

.intro p {
  color: white;
}

canvas {
  display: none;
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.menu {
  width: 100%;
  height: 100%;
  background-color: black;
  display: none;
  align-items: center;
  justify-content: center;
}

.menu ul {
  padding: 0;
  margin: 0;
  list-style: none;
  display: flex;
  justify-content: center;
  align-items: center;
}

.menu ul li {
  padding: 15px;
}

.game-over {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: black;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 15px;
  visibility: hidden;
}

.game-over p {
  height: fit-content;
  padding: 0;
  margin: 0;
  color: white;
  font-size: 3em;
}

.game-over button {
  font-size: 1.5em;
}

.game-stats {
  visibility: hidden;
}

.left-side {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  gap: 25px;
}

.left-side .text-title,
.left-side .text {
  padding-left: 15px;
  color: white;
  pointer-events: none;
}

.left-side .text-title {
  margin: 15px 0 0 0;
  font-size: 1.5em;
}

.left-side .text {
  margin: 0;
  font-size: 3em;
}

.game-stats .middle {
  position: absolute;
  top: 0;
  width: 100%;
  display: flex;
  justify-content: center;
}

.game-stats .middle .lives {
  margin: 15px 0 0 0;
}

.highest-score {
  position: absolute;
  top: 0;
  right: 0;
}

.highest-score .text-title,
.highest-score .text {
  padding-right: 15px;
  color: white;
  pointer-events: none;
}

.highest-score .text-title {
  margin: 15px 0 0 0;
  font-size: 1.5em;
}

.highest-score .text {
  margin: 0;
  font-size: 3em;
  text-align: right;
}

